--- a/Two View/Base.lproj/Main.storyboard
+++ b/Two View/Base.lproj/Main.storyboard
@@ -16,24 +16,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fXS-wq-YvH">
-                                <rect key="frame" x="87" y="162" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemGreenColor"/>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="V3F-tA-Ut0">
-                                <rect key="frame" x="87" y="335" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V3F-tA-Ut0">
+                                <rect key="frame" x="20" y="444" width="374" height="413"/>
                                 <color key="backgroundColor" systemColor="systemRedColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fXS-wq-YvH">
+                                <rect key="frame" x="20" y="49" width="374" height="374"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fXS-wq-YvH" secondAttribute="trailing" constant="20" id="40Y-LX-ej5"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="V3F-tA-Ut0" secondAttribute="bottom" constant="5" id="78y-eU-t7W"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="V3F-tA-Ut0" secondAttribute="trailing" constant="20" id="ENu-Re-WlS"/>
+                            <constraint firstItem="V3F-tA-Ut0" firstAttribute="top" secondItem="fXS-wq-YvH" secondAttribute="bottom" constant="21" id="Iqd-iQ-NHv"/>
+                            <constraint firstItem="fXS-wq-YvH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="5" id="T9w-uW-Gi4"/>
+                            <constraint firstItem="V3F-tA-Ut0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="gBx-1a-Cd5"/>
+                            <constraint firstItem="fXS-wq-YvH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="kLI-FL-NRf"/>
+                            <constraint firstItem="V3F-tA-Ut0" firstAttribute="height" secondItem="fXS-wq-YvH" secondAttribute="height" multiplier="1.10553" id="tgv-wo-T23"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="34.782608695652179" y="69.642857142857139"/>
+            <point key="canvasLocation" x="33.75" y="68.75"/>
         </scene>
     </scenes>
     <resources>
